# AI-travel-master

./: .gitignore  README.md  langgraph.json  package-lock.json  package.json  pluschatbot.postman_collection.json  pyproject.toml  test_eam_assistant.py
.cursor/rules/: add-generative-ui.mdc
.github/workflows/: unit-tests.yml
src/plus_assistant/: __init__.py  configuration.py  plus_assistant.py  prompts.py  test_assistants.py  travel_master.py  utils.py
src/plus_assistant/accommodation_assistant/: __init__.py  accommodation_assistant.py  accommodation_assistant_tools.py
src/plus_assistant/car_rental_assistant/: __init__.py  car_rental_assistant.py  car_rental_assistant_tools.py
src/plus_assistant/eam_assistant/: eam_assistant.py  eam_assistant_tools.py  ui.tsx
src/plus_assistant/finance_assistant/: finance_assistant.py  finance_assistant_tools.py
src/plus_assistant/flight_assistant/: __init__.py  flight_assistant.py  flight_assistant_tools.py
src/plus_assistant/search_assistant/: search_assistant.py  search_assistant_tools.py
src/react_agent/: configuration.py  graph.py  prompts.py  tools.py
src/travel_master/: __init__.py  configuration.py  prompts.py  travel_master.py  utils.py
src/travel_master/accommodation_assistant/: __init__.py  accommodation_assistant.py  accommodation_assistant_tools.py
src/travel_master/car_rental_assistant/: __init__.py  car_rental_assistant.py  car_rental_assistant_tools.py
src/travel_master/flight_assistant/: __init__.py  flight_assistant.py  flight_assistant_tools.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py
